<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:orientation="vertical"
        tools:context="com.example.android.pockethungarian.MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/basics"
            android:orientation="horizontal">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:src="@drawable/minta"/>
               <TextView
                style="@style/Block_style01"
                android:text="@string/first_block" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/family"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/family"/>
        <TextView
            style="@style/Block_style02"
            android:text="@string/second_block" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/around_the_house"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/house"/>
            <TextView
                style="@style/Block_style01"
                android:text="@string/third_block" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colors_and_numbers"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/piros"/>
            <TextView
                style="@style/Block_style02"
                android:text="@string/fourth_block" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grocery_and_shops"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/grocery"/>
            <TextView
                style="@style/Block_style01"
                android:text="@string/fifth_block" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eating_out"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/desszert"/>
            <TextView
                style="@style/Block_style02"
                android:text="@string/sixth_block" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accommodation"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:src="@drawable/szallas"/>
            <TextView
                style="@style/Block_style01"
                android:text="@string/seventh_block" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

